--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
+    "next-intl": "^4.3.10",
     "next-themes": "^0.3.0",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "rehype-pretty-code": "^0.13.2",
