--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,11 @@
         "name": "next"
       }
     ],
-    "paths": {
-      "@/*": ["./src/*"]
+   "paths": {
+      "@/*": ["./src/*"],
+      "@/i18n/*": ["./src/i18n/*", "./i18n/*"],   // ✅ supports both locations
+      "@/data/*": ["./src/data/*", "./data/*"],    // ✅ supports both locations
+      "@/components/*": ["./src/components/*", "./components/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
